--- a/FeasGraphs.Rmd
+++ b/FeasGraphs.Rmd
@@ -46,7 +46,7 @@ loop <- function(start.date, date.list){
 ### Load in the Ch 2 data and clean it for the first figure
 
 ```{r}
-ch2 <- read.csv("~/Desktop/GitHub/Feasibility/Data/MsCcSurvNov8.csv", header = TRUE)
+ch2 <- read.csv("~/Desktop/GitHub/Feasibility/Data/MsCcSurvDec31Final.csv", header = TRUE)
 
 ch2 <- ch2[ch2$survived == "yes", ]
 
@@ -59,9 +59,13 @@ ch2 <- ch2[ch2$ID != 124, ]
 # Get development times for wandering
 ch2$day.hatch <- loop(start.date = "04/21/2020", date.list = ch2$date.hatch)
 ch2$day.w <- loop(start.date = "04/21/2020", date.list = ch2$date.w)
+ch2$day.coc <- loop(start.date = "04/21/2020", date.list = ch2$date.coc)
 
 ch2$delta_w <- ch2$day.w - ch2$day.hatch
 ch2$mass_w <- ch2$mass.w
+
+ch2$delta_coc <- ch2$day.coc - ch2$day.hatch
+ch2$mass_coc <- ch2$mass.frozen
 ```
 
 ### Load in the Diamond data and clean it
@@ -131,6 +135,22 @@ ggplot(aes(x = delta_w, y = mass_w, color = food, shape = expt), data = ch2g3) +
 
 ggsave("~/Desktop/GitHub/Feasibility/Figs/Ch2Fig3.png", width = 8, height = 5)
 ```
+## Figure 3.5 
+
+```{r}
+ggplot(aes(x = delta_coc, y = mass_coc, color = food, shape = expt), data = ch2) + 
+  theme_bw() + 
+ # geom_point() +
+  geom_jitter(width = 0.2) + 
+  scale_shape_manual(values = c(4),  name = "Experiment") + 
+  labs(x = "Time until wasp emergence (days)", y = "Mass at wasp emergence (mg)") + 
+  scale_color_manual(values=c("#95D840", "#3F87BC", "#440D54"),
+                     name="Food Type",
+                     label=c("Devil's Claw", "Diet", "Tobacco"))
+
+ggsave("~/Desktop/GitHub/Feasibility/Figs/Ch2Fig3.5.png", width = 8, height = 5)
+```
+
 
 ## Figure 4
 
