--- a/FeasStats.Rmd
+++ b/FeasStats.Rmd
@@ -149,6 +149,13 @@ TB significantly different than DC, diet is not
 
 ANOVA is very close to significance - need to bootstrap or something to figure it out 
 
+```{r}
+ch2survmeans <- summarySE(data = ch2para, measurevar = "perc.w.surv.tot", groupvars = "food")
+
+
+```
+
+
 ### Percentages of wasps that had emergence at 4th instar in each diet type 
 
 ```{r}
@@ -217,3 +224,100 @@ anova(mod2mass)
 ```
 
 Yes, yes, yes - all significant 
+
+
+# Chapter 3: Effects of heat shock and parasitization on all 3 trophic levels
+
+## Load in the data
+
+
+```{r}
+ch3 <- read.csv("~/Desktop/MsCcHSFeedDec27Final.csv")
+scan <- read.csv("~/Desktop/MsCcHSFeedLeafScanFinal.csv", header = T)
+```
+
+## Manipulate ch3 into correct forms
+
+```{r}
+ch3 <- ch3[ch3$fate != "dead" & ch3$fate != "quink" & ch3$fate != "wander*" & ch3$fate != "?", ]
+
+ch3$outcome <- ch3$fate
+
+ch3$outcome <- gsub(" mongo", "", ch3$outcome)
+ch3$outcome <- gsub("em", "we", ch3$outcome)
+
+ch3$mass.max <- ch3$mass.max / 1000 
+
+```
+
+
+```{r}
+#1
+scan$comb <- paste(scan$Caterpillar.ID, "_", scan$Leaf.ID)
+
+#0
+unique <- unique(scan$comb)
+consumed <- as.data.frame(unique)
+consumed$area <- 0
+
+#2-4
+for (i in 1:length(consumed$unique)){
+    subset <- filter(scan, scan$comb == consumed[i, 1])
+    value <- max(subset$Leaf.Area) - min(subset$Leaf.Area)
+    consumed[i, 2] <- value
+}  
+
+#5
+consumed <- consumed %>%
+  separate(unique, c("catID", "leafID"), "_")
+
+#6
+ID <- unique(consumed$catID)
+consumedsum <- as.data.frame(ID)
+consumedsum$totalarea <- 0
+
+#7
+for (i in 1:length(consumedsum$ID)){
+  subset2 <- filter(consumed, consumed$catID == consumedsum[i, 1])
+  value2 <- sum(subset2$area)
+  consumedsum[i, 2] <- value2
+}
+
+#8
+consumedsum$ID <- as.numeric(consumedsum$ID)
+
+consumedsum <- consumedsum[consumedsum$ID %in% ch3$ID, ]
+
+ch3 <- ch3[ch3$ID %in% consumedsum$ID, ]
+
+consumedsum <- consumedsum[order(consumedsum$ID), ]
+
+ch3$area <- consumedsum$totalarea
+
+```
+
+
+```{r}
+ch3$day.hatch <- loop(start.date = "07/12/2020", date.list = ch3$date.hatch)
+ch3$day.max <- loop(start.date = "07/12/2020", date.list = ch3$date.max)
+
+ch3$ttmax <- ch3$day.max - ch3$day.hatch
+```
+
+```{r}
+ch3$perc.w.ecl <- ch3$num.w.eclos / (ch3$num.w.coc + ch3$num.w.larvae)
+ch3$num.w.total <- (ch3$num.w.coc + ch3$num.w.larvae)
+
+ch3$HS <- factor(ch3$HS, levels = c("yes", "no"))
+ch3$para <- factor(ch3$para, levels = c("yes", "no"))
+```
+
+## Run models for predictors of leaf area
+
+```{r}
+mod3area <- lmer(area ~ food*outcome + (1|bin), data = ch3)
+
+summary(mod3area)
+anova(mod3area)
+```
+
