--- a/FeasGraphs.Rmd
+++ b/FeasGraphs.Rmd
@@ -211,10 +211,10 @@ ggplot(aes(x = stage, y = number, color = food), data = ses) +
   geom_errorbar(aes(ymin = number - se, ymax = number + se),
                 width = .1, size = .5) +
   scale_color_manual(values=c("#95D840", "#3F87BC", "#440D54"),
-                     name="Food Type",
+                     name="Host Food Type",
                      label=c("Devil's Claw", "Diet", "Tobacco")) + 
   guides(size = FALSE) + 
-  labs(x = "Life stage", y = "Mean number of individuals")
+  labs(x = "Wasp life stage", y = "Mean number of wasp individuals")
 
 ggsave("~/Desktop/GitHub/Feasibility/Figs/Ch2Fig4.png", width = 8, height = 5)
 ```
@@ -237,6 +237,8 @@ ch3$outcome <- ch3$fate
 
 ch3$outcome <- gsub(" mongo", "", ch3$outcome)
 ch3$outcome <- gsub("em", "we", ch3$outcome)
+
+ch3$mass.max <- ch3$mass.max / 1000
 
 ```
 
@@ -327,7 +329,7 @@ ggplot(aes(x = area, y = mass.max), data = ch3) +
   geom_point(aes(color = food, shape = outcome)) + 
   scale_shape_manual(values = c(6, 4, 19)) + 
   scale_color_manual(values = c("#95D840", "#440D54")) +
-  labs(x = "Leaf surface area consumed (cm2)", y = "Maximum mass achieved (mg)",
+  labs(x = "Leaf surface area consumed (cm2)", y = "Maximum mass achieved (g)",
        shape = "Developmental Outcome", color = "Hostplant Consumed")
 
 ggsave("~/Desktop/GitHub/Feasibility/Figs/Ch3Fig5.png", width = 8, height = 5)
@@ -343,7 +345,7 @@ ggplot(aes(x = ttmax, y = mass.max), data = ch3) +
   geom_point(aes(color = food, shape = outcome)) + 
   scale_shape_manual(values = c(6, 4, 19)) + 
   scale_color_manual(values = c("#95D840", "#440D54")) +
-  labs(x = "Time at maximum mass (days)", y = "Maximum mass achieved (mg)",
+  labs(x = "Time at maximum mass (days)", y = "Maximum mass achieved (g)",
        shape = "Developmental Outcome", color = "Hostplant Consumed")
 
 ggsave("~/Desktop/GitHub/Feasibility/Figs/Ch3Fig6.png", width = 8, height = 5)
@@ -360,8 +362,8 @@ ggplot(aes(x = num.w.total, y = perc.w.ecl, shape = HS), data = ch3) +
   geom_point(alpha = 0.8, aes(color = food)) + 
   scale_shape_manual(values = c(19, 4)) +
   scale_color_manual(values = c("#95D840", "#440D54")) + 
-  labs(x = "Number emerged", y = "Percentage of wasps eclosed", shape = "Heat Shock Status", 
-       color = "Hostplant Consumed", linetype = "Linear reg - Heat shock status")
+  labs(x = "Number of wasp larvae emerged", y = "Proportion of wasps eclosed", shape = "Heat Shock Status", 
+       color = "Hostplant Consumed")
 
 ggsave("~/Desktop/GitHub/Feasibility/Figs/Ch3Fig7.png", width = 8, height = 5)
 ```
